[gd_scene load_steps=7 format=3 uid="uid://chpmq84pwd8vb"]

[ext_resource type="Script" path="res://Unicorn.gd" id="1_3qldm"]
[ext_resource type="Texture2D" uid="uid://re8l3l1o2l0h" path="res://Assets/Frosty.png" id="2_q8m1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdvqq"]
size = Vector2(15, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_0r6p7"]
radius = 300.0

[sub_resource type="Gradient" id="Gradient_0tmeb"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.0152672, 0.839695, 0.965649, 1)
colors = PackedColorArray(1, 1, 1, 0.905882, 1, 1, 1, 0.888764, 1, 1, 1, 0.486275, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vgey1"]
gradient = SubResource("Gradient_0tmeb")
width = 275
height = 275
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.820513, 0.123932)

[node name="Unicorn" type="Node2D"]
position = Vector2(55, 53)
script = ExtResource("1_3qldm")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.00987305, 0.00987305)
texture = ExtResource("2_q8m1u")
region_rect = Rect2(0, 0, 1996.74, 1852.97)

[node name="Interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_fdvqq")

[node name="SafeArea" type="Area2D" parent="."]
scale = Vector2(0.095, 0.095)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeArea"]
shape = SubResource("CircleShape2D_0r6p7")
debug_color = Color(0.635294, 0.741176, 0.00392157, 0.419608)

[node name="PointLight2D" type="PointLight2D" parent="SafeArea"]
scale = Vector2(0.755, 0.755)
blend_mode = 2
texture = SubResource("GradientTexture2D_vgey1")
texture_scale = 2.89

[connection signal="body_entered" from="Interact" to="." method="_on_interact_body_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_interact_body_exited"]
[connection signal="body_entered" from="SafeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="body_exited" from="SafeArea" to="." method="_on_safe_area_body_exited"]
